Fixes <td> width issues (#5)
Updated CSS to insure fixed width and height of <td> elements.
Give a nice error when you can't send AJAX.
Give an error when the dimensions are probably too big (it's browser-based, so hard to tell).

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 table.board {
     border-spacing: 0;
-    border-collapse: collapse;
+    outline: 1px solid black;
+}
+
+table.board tr {
+    white-space: nowrap;
 }
 
 table.board td {
+    display: inline-block;
     text-align: center;
     width: 20px;
     height: 20px;
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 td.unrevealed {
@@ -20,10 +25,12 @@ td.revealed {
     background-color: #c6c6c6;
 }
 
-td.flagged {
+td.flagged, td.correct {
     cursor: pointer;
     background-color: #c6c6c6;
     background-image: url("flag.png");
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 td.wrong {
@@ -32,8 +39,6 @@ td.wrong {
 }
 
 td.correct {
-    cursor: default;
-    background-image: url("flag.png");
     background-color: #00ff00;
 }
 
